# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.


  12 Oct 2003; Brian Harring <ferringb@gentoo.org> portage_exec.py: spawn_sandbox
  wasn't passing the opt_name down to spawn, it now does.

  11 Oct 2004; Jason Stubbs; <jstubbs@gentoo.org> emerge: Reverted back to
  previous command line parsing code as --search options were being mishandled.

  11 Oct 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Fix for the
  SHA1 digest slipout and the exec missing/broken binary traceback.

  11 Oct 2004; Nicholas Jones <carpaski@gentoo.org> pym/*: See below.

  11 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> bin/*: Added catching and
  propogating of SystemExit exception to all blanket exception handlers.

  11 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> repoman: Fixed repoman LICENSE
  check to accept || () conditions.

*portage-2.0.51_rc8 (10 Oct 2004): RC + Lock cleanup, Happy RC #4

  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> emerge: Added in close()
  calls to ensure that control-C gets intercepted by portage instead of the
  children. Added in a re-raise for the SysExit exception inside of the
  regen and metadata targets.
  
  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> cnf/make.conf*:
  benno@nietvergeten.nl's touchups to make.conf files.

  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> sandbox/*: Includes one
  of solar's patches to fix up potential holes in sandbox.

  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> portage_exec.py: Added
  a cleanup routine.

  10 Oct 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: A could cwd
  fixes and removed the compat-writing for digests.
